# Soft_robotics

ros2_tentacle/: .gitignore  README.md
ros2_tentacle/arduino/test_controls/tentacle_controls/: tentacle_controls.ino
ros2_tentacle/arduino/three/: three.ino
ros2_tentacle/tentacle_control/: CMakeLists.txt  package.xml
ros2_tentacle/tentacle_control/config/: comm.yaml
ros2_tentacle/tentacle_control/launch/: controller.launch.xml  ps3.launch.xml
ros2_tentacle/tentacle_control/src/: controller.cpp  teleop_keyboard.cpp  teleop_ps3.cpp
ros2_tentacle/tentacle_interfaces/: CMakeLists.txt  package.xml
ros2_tentacle/tentacle_interfaces/msg/: Actuation.msg
